--- a/get_more_done/templates/todolist.html
+++ b/get_more_done/templates/todolist.html
@@ -7,6 +7,24 @@
 {% block content  %}
     <div class="container">
       <br>
+      {% if messages %}
+        {% for message in messages %}
+          <div class="alert alert-primary alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+        {% endfor %}
+      {% endif %}
+
+      <form method="POST">
+        {% csrf_token %}
+        <div class="mb-3">
+          <input type="text" class="form-control" name="task" placeholder="New Task?">
+        </div>
+
+        <button type="submit" class="btn btn-primary">Add Task</button>
+      </form>
+      <br>
           <table class="table table-striped table-hover">
               <thead>
                     <tr>
@@ -17,23 +35,25 @@
                     </tr>
               </thead>
               <tbody>
-              {% for obj in all_tasks %}
-                	  {% if obj.done %}
-                        <tr class="table-success">
-                          <td>{{ obj.task }}</td>
-                          <td>Completed</td>
-                          <td>Edit</td>
-                          <td>Delete</td>
-                        </tr>
-                    {% else %}
-                    <tr class="table-danger">
-                      <td>{{ obj.task }}</td>
-                      <td>Not Completed</td>
-                      <td>Edit</td>
-                      <td>Delete</td>
-                    </tr>
-                    {% endif %}
-              {% endfor %}
+              {% if all_tasks %}
+                {% for obj in all_tasks %}
+                      {% if obj.done %}
+                          <tr class="table-success">
+                            <td>{{ obj.task }}</td>
+                            <td>Completed</td>
+                            <td>Edit</td>
+                            <td>Delete</td>
+                          </tr>
+                      {% else %}
+                      <tr class="table-danger">
+                        <td>{{ obj.task }}</td>
+                        <td>Not Completed</td>
+                        <td>Edit</td>
+                        <td>Delete</td>
+                      </tr>
+                      {% endif %}
+                {% endfor %}
+              {% endif %}
               </tbody>
           </table>
     </div>
