--- a/get_more_done/templates/todolist.html
+++ b/get_more_done/templates/todolist.html
@@ -16,13 +16,11 @@
         {% endfor %}
       {% endif %}
 
-      <form method="POST">
+      <form method="POST" class="row">
         {% csrf_token %}
-        <div class="mb-3">
-          <input type="text" class="form-control" name="task" placeholder="New Task?">
-        </div>
-
-        <button type="submit" class="btn btn-primary">Add Task</button>
+        <label class="col-lg-4">Your Tasks For Today?</label>
+        <input type="text" class="form-control col-lg-6" name="task" placeholder="New Task?">
+        <button type="submit" class="btn btn-primary col-lg-2">Add Task</button>
       </form>
       <br>
           <table class="table table-striped table-hover">
@@ -42,14 +40,14 @@
                             <td>{{ obj.task }}</td>
                             <td>Completed</td>
                             <td>Edit</td>
-                            <td>Delete</td>
+                            <td><a href="{% url 'delete_task' obj.id %}">Delete</a></td>
                           </tr>
                       {% else %}
                       <tr class="table-danger">
                         <td>{{ obj.task }}</td>
                         <td>Not Completed</td>
                         <td>Edit</td>
-                        <td>Delete</td>
+                        <td><a href="{% url 'delete_task' obj.id %}">Delete</a></td>
                       </tr>
                       {% endif %}
                 {% endfor %}
