--- a/get_more_done/templates/todolist.html
+++ b/get_more_done/templates/todolist.html
@@ -39,14 +39,14 @@
                           <tr class="table-success">
                             <td>{{ obj.task }}</td>
                             <td>Completed</td>
-                            <td>Edit</td>
+                            <td><a href="{% url 'edit_task' obj.id %}">Edit</a></td>
                             <td><a href="{% url 'delete_task' obj.id %}">Delete</a></td>
                           </tr>
                       {% else %}
                       <tr class="table-danger">
                         <td>{{ obj.task }}</td>
                         <td>Not Completed</td>
-                        <td>Edit</td>
+                        <td><a href="{% url 'edit_task' obj.id %}">Edit</a></td>
                         <td><a href="{% url 'delete_task' obj.id %}">Delete</a></td>
                       </tr>
                       {% endif %}
