--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     {% endblock title  %}
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#"><img src="{% static 'images/gmd-logo.png'%}" alt="Todo List"></a>
+        <a class="navbar-brand" href="{% url 'index' %}"><img src="{% static 'images/gmd-logo.png'%}" alt="Todo List"></a>
         <div class="container-fluid">
             
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,7 +18,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link" href="{% url 'todolist' %}">Home</a>
+                    <a class="nav-link" href="{% url 'index' %}">Home</a>
                     <a class="nav-link" href="{% url 'todolist' %}">To-do List</a>
                     <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
                     <a class="nav-link" href="{% url 'about' %}">About Us</a>
