--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    
+    <link rel="icon" href="{% static 'images/favicon.ico'%}" type="image/gif" sizes="16x16">
     {% block title  %}
     {% endblock title  %}
 
@@ -27,7 +27,7 @@
         </div>
     </nav>
   </head>
-  <body>
+  <body class="bg-primary" style="--bs-bg-opacity: .2">
     {% block content  %}
     {% endblock content %}
 
