add login & logout functionality and add page restrictions

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,21 @@
                 </div>
             </div>
         </div>
+        {% if user.is_authenticated %}
+            <div class="form-inline my-2 my-lg-0">
+              <div class="p-2 bg-dark text-white">Logged in as {{ user.username }}</div>
+              <a href="{% url 'logout' %}">
+              <button class="btn btn-outline-danger mr-2 my-sm-0" type="submit">Logout</button>
+              </a>
+            </div>
+        {% else %}
+            <a href="{% url 'login' %}">
+              <button class="btn btn-outline-success m-2 my-sm-0" type="submit">Login</button>
+            </a>
+            <a href="{% url 'register' %}">
+              <button class="btn btn-outline-info my-sm-0" type="submit">Register</button>
+            </a>
+        {% endif %}
     </nav>
   </head>
   <body class="bg-primary" style="--bs-bg-opacity: .2">
