Edit Contact and About Pages

--- a/get_more_done/templates/contact.html
+++ b/get_more_done/templates/contact.html
@@ -5,7 +5,9 @@
 {% endblock title  %}
 
 {% block content  %}
-    <div class="container">
-      <h1>{{ contact_text }}</h1>
+    <div class="row mt-5">
+      <div class="col-md-10 offset-md-1">
+        <center><p class="h1 text-primary">{{ contact_text }}</p></center>
+      </div>
     </div>
 {% endblock content %}
