resize and change images format for better performance

--- a/get_more_done/templates/index.html
+++ b/get_more_done/templates/index.html
@@ -9,13 +9,13 @@
     <div class="container">
       <div class="row mt-5">
         <div class="col-lg-4">
-          <img  src="{% static 'images/todo.jpg' %}" alt="Todo" class="rounded-4 shadow-lg" width="360" height="250" >
+          <img  src="{% static 'images/gmd-todo.webp' %}" alt="Todo" class="rounded-4 shadow-lg" width="360" height="239" >
         </div>
         <div class="col-lg-4">
-          <img  src="{% static 'images/doing.jpg' %}" alt="Doing" class="rounded-4 shadow-lg" width="360" height="250" >
+          <img  src="{% static 'images/gmd-doing.webp' %}" alt="Doing" class="rounded-4 shadow-lg" width="360" height="239" >
         </div>
         <div class="col-lg-4">
-          <img  src="{% static 'images/done.jpg' %}" alt="Done" class="rounded-4 shadow-lg" width="360" height="250" >
+          <img  src="{% static 'images/gmd-done.webp' %}" alt="Done" class="rounded-4 shadow-lg" width="360" height="239" >
         </div>
       </div>
       <div class="row mt-5">
