--- a/templates/base.html
+++ b/templates/base.html
@@ -5,48 +5,46 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Task Manager App">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="static/style/style.css">
     <link rel="icon" href="{% static 'images/favicon.ico'%}" type="image/gif" sizes="16x16">
     {% block title  %}
     {% endblock title  %}
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="{% url 'index' %}"><img src="{% static 'images/gmd-logo.png'%}" alt="Todo List"></a>
-        <div class="container-fluid">
-            
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link" href="{% url 'index' %}">Home</a>
-                    <a class="nav-link" href="{% url 'todolist' %}">To-do List</a>
-                    <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
-                    <a class="nav-link" href="{% url 'about' %}">About Us</a>
-                </div>
-            </div>
-        </div>
-        {% if user.is_authenticated %}
-            <div class="form-inline my-2 my-lg-0">
-              <div class="p-2 bg-dark text-white">Logged in as {{ user.username }}</div>
-              <a href="{% url 'logout' %}">
-              <button class="btn btn-outline-danger mr-2 my-sm-0" type="submit">Logout</button>
-              </a>
-            </div>
-        {% else %}
-            <a href="{% url 'login' %}">
-              <button class="btn btn-outline-success m-2 my-sm-0" type="submit">Login</button>
-            </a>
-            <a href="{% url 'register' %}">
-              <button class="btn btn-outline-info my-sm-0" type="submit">Register</button>
-            </a>
-        {% endif %}
-    </nav>
+    
   </head>
-  <body class="bg-primary" style="--bs-bg-opacity: .2">
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="{% url 'index' %}"><img src="{% static 'images/gmd-logo.png'%}" alt="Todo List"></a>
+      <div class="container-fluid">
+          
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                  <a class="nav-link" href="{% url 'index' %}">Home</a>
+                  <a class="nav-link" href="{% url 'todolist' %}">To-do List</a>
+                  <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
+                  <a class="nav-link" href="{% url 'about' %}">About Us</a>
+              </div>
+          </div>
+      </div>
+      {% if user.is_authenticated %}
+          <div class="form-inline my-2 my-lg-0">
+            <div class="p-2 bg-dark text-white">Logged in as {{ user.username }}</div>
+            <a href="{% url 'logout' %}">
+            <button class="btn btn-outline-danger mr-2 my-sm-0" type="submit">Logout</button>
+            </a>
+          </div>
+      {% else %}
+          <a class="btn btn-success mr-2 my-2 my-sm-0" href="{% url 'login' %}"> Login </a>
+          <a class="btn btn-primary my-2 my-sm-0" href="{% url 'register' %}"> Register</a>
+      {% endif %}
+    </nav>
     {% block content  %}
     {% endblock content %}
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
